2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>

PR middle-end/10060
        * emit-rtl.c (copy_rtx_if_shared): Split out into ...
        (copy_rtx_if_shared_1): here and optimize the last one
        in the sequence into tail-recursion.
        (reset_used_flags): Optimize the last one
        in the sequence into tail-recursion.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74424 138bc75d-0d04-0410-961f-82ee72b054a4